# CppProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt
benchmarks/SomeLibrary/: SomeLibrary.bm.cpp
cmake/: AddDoxygenDocs.cmake  AddGoogleBenchmark.cmake  AddGoogleTest.cmake  Options.cmake  ProjectSettings.cmake
src/: CMakeLists.txt  main.cpp
src/SomeLibrary/: CMakeLists.txt
src/SomeLibrary/SomeLibrary/: SomeClass.cpp  SomeClass.hpp
tests/: CMakeLists.txt
tests/SomeLibrary/: SomeLibrary.test.cpp
