set(BENCHMARKS_EXECUTABLE_NAME "${PROJECT_NAME}Benchmarks")
set(BENCHMARKS_EXECUTABLE_SOURCES "${BENCHMARKS_EXECUTABLE_NAME}_SOURCES")

file(GLOB_RECURSE BENCHMARKS_EXECUTABLE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.bm.cpp")

add_executable(${BENCHMARKS_EXECUTABLE_NAME} ${BENCHMARKS_EXECUTABLE_SOURCES})

set_target_properties(${BENCHMARKS_EXECUTABLE_NAME} PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED YES
        CXX_EXTENSIONS OFF)

include(AddGoogleBenchmark)
target_link_libraries(${BENCHMARKS_EXECUTABLE_NAME} PRIVATE
        ${PROJECT_NAME}::SomeLibraryLib
        ${PROJECT_NAME}::ProjectSettings
        benchmark::benchmark_main)
