set(SOME_LIB_NAME "SomeLibraryLib")
set(SOME_LIB_HEADERS "${SOME_LIB_NAME}_HEADERS")
set(SOME_LIB_SOURCES "${SOME_LIB_NAME}_SOURCES")

file(GLOB_RECURSE SOME_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
file(GLOB_RECURSE SOME_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

add_library(${SOME_LIB_NAME} STATIC ${SOME_LIB_SOURCES} ${SOME_LIB_HEADERS})
add_library(${PROJECT_NAME}::${SOME_LIB_NAME} ALIAS ${SOME_LIB_NAME})

set_target_properties(${SOME_LIB_NAME} PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED YES
        CXX_EXTENSIONS NO)

target_link_libraries(${SOME_LIB_NAME} PRIVATE ProjectSettings)
target_include_directories(${SOME_LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})